[package]
name = "acorn_adventures_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4"
mongodb = { version = "2.1"}
bson = { version = "2", features = ["chrono-0_4"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
serde = "1.0"
serde_urlencoded = "0.7"
serde_json = "1.0"
async-trait = "0.1.56"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"